copy all files in dist

--- a/lib/afrostream-player.less
+++ b/lib/afrostream-player.less
@@ -1,4 +1,4 @@
-@import '../bower_components/video.js/src/css/video-js.less';
+@import '../lib/video-js.less';
 @import '../node_modules/videojs-chromecast/src/videojs.chromecast.less';
 
 @slider-bar-pattern: ~'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAGCAYAAADgzO9IAAAAP0lEQVQIHWWMAQoAIAgDR/QJ/Ub//04+w7ZICBwcOg5FZi5iBB82AGzixEglJrd4TVK5XUJpskSTEvpdFzX9AB2pGziSQcvAAAAAAElFTkSuQmCC';
@@ -13,7 +13,7 @@
 @big-play-width: 3em;
 @big-play-height: 3em;
 @square-icon: '';
-@vjs-font-path: '../lib/fonts';
+@vjs-font-path: '../lib/font';
 @spinner5-icon: '\e601';
 @app-padding : 20px;
 
