--- a/lib/control-bar/progress-tip.less
+++ b/lib/control-bar/progress-tip.less
@@ -1,4 +1,4 @@
-@import (reference) '../../bower_components/video.js/src/css/video-js.less';
+@import (reference) '../../lib/video-js.less';
 
 .vjs-tip {
   display: block;
