--- a/lib/afrostream-player.less
+++ b/lib/afrostream-player.less
@@ -9,9 +9,9 @@
 @big-play-border-width : 0.1em;
 @big-play-border-radius: 100%;
 @big-play-font-size: 3em;
-@base-font-size: 1em;
 @big-play-width: 3em;
 @big-play-height: 3em;
+@base-font-size: 1em;
 @square-icon: '';
 @vjs-font-path: '../lib/font';
 @spinner5-icon: '\e601';
@@ -119,14 +119,9 @@ body.vjs-full-window {
     right: @app-padding;
     display: -webkit-box;
     display: -moz-box;
-    display: -webkit-flexbox;
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
-    -webkit-box-pack: start;
-    -moz-box-pack: start;
-    -webkit-flex-pack: start;
-    -ms-flex-pack: start;
     -webkit-justify-content: flex-start;
     justify-content: flex-start;
   }
@@ -140,7 +135,8 @@ body.vjs-full-window {
     padding: 0;
     top: 50%;
     cursor: pointer;
-    font-size: 0.8em;
+    font-size: @base-font-size;
+    line-height: 1.5em;
   }
 
   /* Loading Spinner
@@ -478,7 +474,6 @@ body.vjs-full-window {
     padding: 0.5em;
     clip: auto;
     background-color: black;
-    font-size: 0.8em;
     margin-left: -1em;
     @trans: visibility 0.2s, opacity 0.2s, top 0.2s;
     .transition(@trans);
@@ -528,7 +523,6 @@ body.vjs-full-window {
     float: right;
     cursor: pointer;
     font-family: VideoJS;
-    font-size: 0.8em;
   }
 
   .vjs-menu {
