--- a/lib/afrostream-player.less
+++ b/lib/afrostream-player.less
@@ -137,7 +137,9 @@ body.vjs-full-window {
     top: 50%;
     cursor: pointer;
   }
-
+  .vjs-time-divider {
+    line-height: 2.8em;
+  }
   /* Loading Spinner
   --------------------------------------------------------------------------------
   */
