add audio button selector

--- a/lib/afrostream-player.less
+++ b/lib/afrostream-player.less
@@ -1,29 +1,6 @@
 @import '../lib/video-js.less';
+@import './config.less';
 @import '../node_modules/videojs-chromecast/src/videojs.chromecast.less';
-
-@slider-bar-pattern: ~'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAGCAYAAADgzO9IAAAAP0lEQVQIHWWMAQoAIAgDR/QJ/Ub//04+w7ZICBwcOg5FZi5iBB82AGzixEglJrd4TVK5XUJpskSTEvpdFzX9AB2pGziSQcvAAAAAAElFTkSuQmCC';
-@control-bg-color: #07141E;
-// e.g. rgb(255, 255, 255) or #ffffff
-@control-bg-alpha: 0.7;
-// 1.0 = 100% opacity, 0.0 = 0% opacity
-@big-play-border-width : 0.1em;
-@big-play-border-radius: 100%;
-@big-play-font-size: 3em;
-@big-play-width: 3em;
-@big-play-height: 3em;
-@base-font-size: 0.8em;
-@square-icon: '';
-@vjs-font-path: 'font';
-@spinner5-icon: '\e606';
-@audio-icon: '\e900';
-@app-padding : 20px;
-@main-font-color: #FFFFFF;
-@color-yellow: #ffc809;
-@color-indigo: #17071d;
-@color-thumbs: #17071d;
-@color-purple: #281430;
-@color-purple-1: #663774;
-@color-purple-transparent: rgba(102, 55, 116, 0.5);
 
 @font-face {
   font-family: 'VideoJS';
@@ -440,7 +417,7 @@
     text-transform: lowercase;
   }
   .vjs-menu-button ul li.vjs-selected {
-    background-color: #000;
+    background-color: #5d2d6f;
   }
   .vjs-menu-button ul li:focus,
   .vjs-menu-button ul li:hover,
@@ -460,6 +437,10 @@
     margin: 0 0 0.3em 0;
     font-weight: bold;
     cursor: default;
+    &:hover {
+      background: #000;
+      color: #FFF;
+    }
   }
 
   /* Subtitles Button */
