--- a/lib/afrostream-player.less
+++ b/lib/afrostream-player.less
@@ -328,7 +328,13 @@
       }
     }
   }
-
+  .vjs-fullscreen-control {
+    &:hover {
+      .vjs-control-text {
+        top: -3.3em;
+      }
+    }
+  }
   /* Menu Buttons (Captions/Subtitles/etc.)
   --------------------------------------------------------------------------------
   */
