--- a/lib/config.less
+++ b/lib/config.less
@@ -3,7 +3,7 @@
 // e.g. rgb(255, 255, 255) or #ffffff
 @control-bg-alpha: 0.7;
 // 1.0 = 100% opacity, 0.0 = 0% opacity
-@big-play-border-width : 0.1em;
+@big-play-border-width: 0.1em;
 @big-play-border-radius: 100%;
 @big-play-font-size: 3em;
 @big-play-width: 3em;
@@ -12,8 +12,9 @@
 @square-icon: '';
 @vjs-font-path: 'font';
 @spinner5-icon: '\e606';
-@audio-icon: '\e900';
-@app-padding : 20px;
+@audio-icon: '\e901';
+@next-icon: "\e900";
+@app-padding: 20px;
 @main-font-color: #FFFFFF;
 @color-yellow: #ffc809;
 @color-indigo: #17071d;
