--- a/lib/component/control-bar/next-control.less
+++ b/lib/component/control-bar/next-control.less
@@ -45,16 +45,17 @@
           font-weight: 100;
           background-color: fade(#000, 70%);
           position: absolute;
-          max-height: 50%;
+          max-height: 85%;
           bottom: 0;
-
+          overflow: hidden;
+          width: 100%;
           .thumb-title {
+            padding: 0.3em;
             font-size: 1em;
-            max-height: 1.1em;
-            font-weight: 500;
             text-transform: uppercase;
             text-align: left;
-            overflow: hidden;
+            margin: 0.3em;
+            word-wrap: break-word;
           }
         }
       }
