--- a/lib/component/control-bar/next-control.less
+++ b/lib/component/control-bar/next-control.less
@@ -25,8 +25,7 @@
       float: left;
       outline: none;
       margin: 0;
-      padding: 0;
-
+      padding: 1px !important;
       .thumb-tile-content {
         width: 150px;
         height: 80px;
@@ -47,14 +46,15 @@
           position: absolute;
           max-height: 85%;
           bottom: 0;
+          left: 0;
+          right: 0;
           overflow: hidden;
-          width: 100%;
           .thumb-title {
-            padding: 0.3em;
+            padding: 0.5em;
             font-size: 1em;
+            line-height: 1.3;
             text-transform: uppercase;
             text-align: left;
-            margin: 0.3em;
             word-wrap: break-word;
           }
         }
