--- a/lib/component/control-bar/next-control.less
+++ b/lib/component/control-bar/next-control.less
@@ -11,6 +11,7 @@
 .vjs-afrostream-skin .vjs-next-control {
   width: 3em;
   cursor: pointer;
+  float: left;
 }
 
 .vjs-afrostream-skin .vjs-next-control:before {
@@ -26,6 +27,13 @@
       outline: none;
       margin: 0;
       padding: 1px !important;
+      text-align: center;
+      text-transform: uppercase;
+      font-size: 1em;
+      line-height: 2em;
+      font-weight: bold;
+      cursor: pointer;
+
       .thumb-tile-content {
         width: 150px;
         height: 80px;
