update videojs skin

--- a/src/css/afrostream.scss
+++ b/src/css/afrostream.scss
@@ -1,5 +1,5 @@
+@import "variables";
+@import "utilities";
 @import "icons";
 @import "../../node_modules/video.js/src/css/video-js";
-@import "utilities";
-@import "variables";
-@import "component/control-bar/control-bar";
+@import "component/control";
