--- a/src/css/afrostream.scss
+++ b/src/css/afrostream.scss
@@ -3,3 +3,4 @@
 @import "icons";
 @import "../../node_modules/video.js/src/css/video-js";
 @import "component/control";
+@import "component/poster";
