--- a/src/css/component/_control.scss
+++ b/src/css/component/_control.scss
@@ -1,5 +1,6 @@
 @import "./slider";
 @import "./progress";
 @import "./volume";
+@import "./big-play";
 @import "./menu/menu";
 @import "./control-bar/control-bar";
