--- a/src/css/component/_slider.scss
+++ b/src/css/component/_slider.scss
@@ -1,3 +1,6 @@
 .video-js .vjs-slider {
   border-radius: $progress-radius;
+  background-color: $slider-bg-color;
+  background-color: rgba($slider-bg-color, 0.5);
+  background-color: rgba(255, 255, 255, .3);
 }
