--- a/src/css/afrostream.scss
+++ b/src/css/afrostream.scss
@@ -4,3 +4,4 @@
 @import "../../node_modules/video.js/src/css/video-js";
 @import "component/control";
 @import "component/poster";
+@import "component/loading";
