skin : volume vertical opttions

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -22,7 +22,7 @@ $big-play-button--transparency: 0.8 !default;
 // Try changing to true
 $center-big-play-button: true;
 
-$progress-radius: 5px;
+$progress-radius: 2.5em;
 
 $controls-margin: 15px;
 
