--- a/src/css/component/_progress.scss
+++ b/src/css/component/_progress.scss
@@ -36,7 +36,7 @@
 // We need an increased hit area on hover
 .video-js .vjs-progress-control .vjs-progress-holder,
 .video-js .vjs-progress-control:hover .vjs-progress-holder {
-  font-size: 1.6em;
+  font-size: $progress-radius;
 }
 
 .vjs-afrostream-skin .vjs-progress-holder {
@@ -49,20 +49,18 @@
 .vjs-afrostream-skin .vjs-progress-control .vjs-progress-holder:after {
   border-radius: 2px;
   display: block;
-  height: 4px;
 }
 
 .vjs-afrostream-skin .vjs-progress-control .vjs-load-progres, .vjs-afrostream-skin .vjs-progress-control .vjs-play-progress {
   border-radius: 2px;
-  height: 4px;
 }
 
 .vjs-afrostream-skin .vjs-playback-rate {
   display: none; //Remove Playback Rate
 }
 
+.vjs-afrostream-skin .vjs-slider-horizontal .vjs-volume-level:before,
 .vjs-afrostream-skin .vjs-mouse-display:before,
-.vjs-afrostream-skin .vjs-play-progress:before,
-.vjs-afrostream-skin .vjs-volume-level:before {
+.vjs-afrostream-skin .vjs-play-progress:before {
   content: ''; //Remove Circle from Progress Bar
 }
