next episode button

--- a/src/css/component/control-bar/_control-bar.scss
+++ b/src/css/component/control-bar/_control-bar.scss
@@ -3,6 +3,7 @@
 @import "track-controls/video";
 @import "play-pause";
 @import "fullscreen";
+@import "next-video-button";
 
 .video-js .vjs-control-bar {
   margin-bottom: $controls-margin;
