--- a/src/css/component/control-bar/_control-bar.scss
+++ b/src/css/component/control-bar/_control-bar.scss
@@ -14,7 +14,7 @@
    bit of blue so it can still be seen on all-black video frames, which are common. */
 .video-js .vjs-control,
 .video-js .vjs-big-play-button,
-.video-js .vjs-volume-menu-button.vjs-menu-button .vjs-menu-content {
+.video-js .vjs-menu-button .vjs-menu-content {
   /* IE8 - has no alpha support */
   background-color: $primary-background-color;
   /* Opacity: 1.0 = 100%, 0.0 = 0% */
