font size tooltips

--- a/src/css/component/_progress.scss
+++ b/src/css/component/_progress.scss
@@ -3,8 +3,8 @@
   border-radius: $progress-radius;
 }
 
-.video-js .vjs-mouse-display:after,
-.video-js .vjs-play-progress:after {
+.video-js .vjs-slider-bar.vjs-mouse-display:after,
+.video-js .vjs-slider-bar.vjs-play-progress:after {
   font-family: $text-font-family;
 }
 
