--- a/src/css/component/_progress.scss
+++ b/src/css/component/_progress.scss
@@ -4,14 +4,20 @@
 }
 
 .video-js .vjs-mouse-display,
+.video-js .vjs-thumbnail-display,
 .video-js .vjs-play-progress {
   font-family: $text-font-family;
 }
 
-.video-js .vjs-progress-control .vjs-play-progress,
+.video-js .vjs-progress-control .vjs-play-progress:after,
 .video-js .vjs-progress-control .vjs-thumbnail-display,
 .video-js .vjs-progress-control .vjs-mouse-display {
-  font-size: 0.8em;
+  font-size: 0.7em;
+  border-radius: 0;
+}
+
+.video-js .vjs-progress-control .vjs-play-progress:after {
+  display: none !important;
 }
 
 .video-js .vjs-slider-bar.vjs-play-progress {
@@ -22,20 +28,22 @@
 /* The main progress bar also has a bar that shows how much has been loaded. */
 .video-js .vjs-load-progress {
   /* For IE8 we'll lighten the color */
-  background: ligthen($slider-load-bg-color, 45%);
+  background: ligthen($slider-load-bg-color, 20%);
   /* Otherwise we'll rely on stacked opacities */
-  background: rgba($slider-load-bg-color, 0.5);
+  background: rgba($slider-load-bg-color, 0.2);
 }
 
 /* The load progress bar also has internal divs that represent
    smaller disconnected loaded time ranges */
 .video-js .vjs-load-progress div {
   /* For IE8 we'll lighten the color */
-  background: ligthen($slider-load-bg-color, 30%);
+  background: ligthen($slider-load-bg-color, 10%);
   /* Otherwise we'll rely on stacked opacities */
-  background: rgba($slider-load-bg-color, 0.45);
-  border-top-right-radius: $progress-radius $progress-radius;
-  border-bottom-right-radius: $progress-radius $progress-radius;
+  background: rgba($slider-load-bg-color, 0.10);
+  &:last-child {
+    border-top-right-radius: $progress-radius $progress-radius;
+    border-bottom-right-radius: $progress-radius $progress-radius;
+  }
 
 }
 
@@ -52,14 +60,14 @@
 .vjs-afrostream-skin .vjs-progress-control {
 }
 
-.vjs-afrostream-skin .vjs-progress-control .vjs-progress-holder::after {
-  border-radius: $progress-radius;
-  display: block;
-}
-
-.vjs-afrostream-skin .vjs-progress-control .vjs-load-progres, .vjs-afrostream-skin .vjs-progress-control .vjs-play-progress {
-  border-radius: $progress-radius;
-}
+//.vjs-afrostream-skin .vjs-progress-control .vjs-progress-holder:after {
+//  border-radius: $progress-radius;
+//  display: block;
+//}
+//
+//.vjs-afrostream-skin .vjs-progress-control .vjs-load-progres, .vjs-afrostream-skin .vjs-progress-control .vjs-play-progress {
+//  border-radius: $progress-radius;
+//}
 
 .vjs-afrostream-skin .vjs-playback-rate {
   display: none; //Remove Playback Rate
@@ -75,10 +83,19 @@
 
 .video-js .vjs-progress-control .vjs-thumbnail-display {
   @extend .vjs-mouse-display;
+
+  &:after {
+    background-color: $primary-background-color;
+    background-color: rgba($primary-background-color, 0.4);
+    border-radius: 0;
+    top: -3.0em;
+    right: -1em;
+  }
+
   .vjs-thumbnail-display_thumb {
     position: absolute;
-    bottom: 20px;
-    left: -40px;
+    top: -3.2em;
+    left: -2.4em;
     display: inline-block;
     background-repeat: no-repeat;
     background-position: 0 0;
