update font size

--- a/src/css/afrostream-player.scss
+++ b/src/css/afrostream-player.scss
@@ -2,6 +2,7 @@
 @import "utilities";
 @import "icons";
 @import "../../node_modules/video.js/src/css/video-js";
+@import "component/layout";
 @import "component/control";
 @import "component/poster";
 @import "component/loading";
