--- a/src/css/afrostream-player.scss
+++ b/src/css/afrostream-player.scss
@@ -6,4 +6,5 @@
 @import "component/control";
 @import "component/poster";
 @import "component/loading";
+@import "component/adaptive";
 @import "component/big-play";
