--- a/src/css/component/_adaptive.scss
+++ b/src/css/component/_adaptive.scss
@@ -4,7 +4,7 @@ $breakpoints: (phone: 320px, tablet: 768px, desktop: 1024px);
 // When the player is absurdly tiny, display nothing but:
 // - Play button
 // - Fullscreen Button
-@include media(">tablet", "<=desktop") {
+@include media(">tablet", "<desktop") {
   .video-js:not(.vjs-fullscreen) {
     .vjs-custom-control-spacer {
       @include flex(auto);
