chromecast : error dash

--- a/src/css/component/control-bar/_control-bar.scss
+++ b/src/css/component/control-bar/_control-bar.scss
@@ -8,6 +8,9 @@
 .video-js .vjs-control-bar {
   margin-bottom: $controls-margin;
   background-color: transparent;
+  .vjs-subtitles-button {
+    display: none;
+  }
 }
 
 /* The default color of control backgrounds is mostly black but with a little
