--- a/src/css/component/control-bar/_next-video-button.scss
+++ b/src/css/component/control-bar/_next-video-button.scss
@@ -16,15 +16,15 @@
 }
 
 .video-js .vjs-next-video-big-button {
-  @extend .vjs-icon-next;
   margin-right: $controls-margin;
-  &:before {
-    line-height: 2;
-    font-size: 3em;
-  }
+  display: inline-block;
+  vertical-align: middle;
   .vjs-control-text {
+    display: inline-block;
+    vertical-align: middle;
+    z-index: 1;
     font-family: $text-font-family;
-    margin: 2em;
+    margin: 2em 4em 2em 2em;
     position: relative;
     float: left;
     max-width: 40px;
@@ -33,9 +33,33 @@
     width: auto;
     overflow: inherit;
   }
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center top;
+  .thumb-tile_thumb {
+    @extend .vjs-icon-next;
+    &:before {
+      position: absolute;
+      right:0;
+      line-height: 2;
+      z-index: 2;
+      font-size: 3em;
+    }
+    position: absolute;
+    top: 0;
+    left: 0;
+    max-width: 100%;
+    max-height: 100%;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center top;
+    &:after {
+      position: absolute;
+      content: '';
+      width: 100%;
+      height: 100%;
+      background-color: rgba($primary-background-color, $secondary-background-transparency);
+    }
+  }
   position: absolute;
   top: 50%;
   margin-top: -100px;
