--- a/src/css/component/control-bar/_next-video-button.scss
+++ b/src/css/component/control-bar/_next-video-button.scss
@@ -24,21 +24,23 @@
     vertical-align: middle;
     z-index: 1;
     font-family: $text-font-family;
-    margin: 2em 4em 2em 2em;
+    margin: 3em 5em 3em 3em;
     position: relative;
     float: left;
-    max-width: 40px;
+    max-width: 4em;
     clip: inherit;
     height: auto;
     width: auto;
     overflow: inherit;
+    text-align: left;
+    text-transform: uppercase;
   }
   .thumb-tile_thumb {
     @extend .vjs-icon-next;
     &:before {
       position: absolute;
-      right:0;
-      line-height: 2;
+      right: 0;
+      line-height: 2.7;
       z-index: 2;
       font-size: 3em;
     }
