--- a/src/css/component/control-bar/_next-video-button.scss
+++ b/src/css/component/control-bar/_next-video-button.scss
@@ -17,50 +17,36 @@
 
 .video-js .vjs-next-video-big-button {
   margin-right: $controls-margin;
+  font-size: 1.5em;
   display: inline-block;
   vertical-align: middle;
+  &:after {
+    font-family: $icon-font-family;
+    font-weight: normal;
+    font-style: normal;
+    content: $icon-next;
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+    right: 0;
+    line-height: 2.5;
+    z-index: 2;
+    font-size: 3em;
+  }
   .vjs-control-text {
     display: inline-block;
     vertical-align: middle;
     z-index: 1;
     font-family: $text-font-family;
-    margin: 3em 5em 3em 3em;
+    margin: 2em;
     position: relative;
-    float: left;
-    max-width: 4em;
+    line-height: 1;
+    width: 4em;
     clip: inherit;
     height: auto;
-    width: auto;
     overflow: inherit;
     text-align: left;
     text-transform: uppercase;
-  }
-  .thumb-tile_thumb {
-    @extend .vjs-icon-next;
-    &:before {
-      position: absolute;
-      right: 0;
-      line-height: 2.7;
-      z-index: 2;
-      font-size: 3em;
-    }
-    position: absolute;
-    top: 0;
-    left: 0;
-    max-width: 100%;
-    max-height: 100%;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center top;
-    &:after {
-      position: absolute;
-      content: '';
-      width: 100%;
-      height: 100%;
-      background-color: rgba($primary-background-color, $secondary-background-transparency);
-    }
   }
   position: absolute;
   top: 50%;
