--- a/src/css/component/_loading.scss
+++ b/src/css/component/_loading.scss
@@ -4,13 +4,10 @@
   top: 50%;
   left: 50%;
   margin: -25px 0 0 -25px;
-  opacity: 0.85;
+  opacity: 0;
 
   // Need to fix centered page layouts
   text-align: left;
-
-  //border: 6px solid rgba($primary-background-color, $primary-background-transparency);
-  // border: 6px solid rgba(43, 51, 63, 0.5);
 
   box-sizing: border-box;
   background-clip: padding-box;
@@ -19,7 +16,6 @@
   border-radius: 25px;
 
   .circular {
-    animation: rotate 2s linear infinite;
     height: 100%;
     transform-origin: center center;
     width: 100%;
@@ -34,133 +30,118 @@
   .path {
     stroke-dasharray: 1, 200;
     stroke-dashoffset: 0;
-    animation: dash 1.5s ease-in-out infinite,
-    color 6s ease-in-out infinite;
     stroke-linecap: round;
   }
 
-  @keyframes rotate {
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-  @keyframes dash {
-    0% {
-      stroke-dasharray: 1, 200;
-      stroke-dashoffset: 0;
-    }
-    50% {
-      stroke-dasharray: 89, 200;
-      stroke-dashoffset: -35;
-    }
-    100% {
-      stroke-dasharray: 89, 200;
-      stroke-dashoffset: -124;
-    }
-  }
-  @keyframes color {
-    100%, 0% {
-      stroke: $color-yellow;
-    }
-    40% {
-      stroke: $color-indigo;
-    }
-    66% {
-      stroke: $color-purple;
-    }
-    80%, 90% {
-      stroke: $color-yellow;
-    }
-  }
 }
 
 .vjs-seeking .vjs-load-progress-spinner,
 .vjs-waiting .vjs-load-progress-spinner {
+  opacity: 0.85;
   display: block;
 }
 
-.vjs-load-progress-spinner:before,
-.vjs-load-progress-spinner:after {
-  content: "";
-  position: absolute;
-  margin: -6px;
-  box-sizing: inherit;
-  width: inherit;
-  height: inherit;
-  border-radius: inherit;
-  // Keep 100% opacity so they don't show through each other
-  opacity: 1;
-  border: inherit;
-  border-color: transparent;
-  border-top-color: white;
-}
-
 // only animate when showing because it can be processor heavy
-.vjs-seeking .vjs-load-progress-spinner:before,
-.vjs-seeking .vjs-load-progress-spinner:after,
-.vjs-waiting .vjs-load-progress-spinner:before,
-.vjs-waiting .vjs-load-progress-spinner:after {
-  -webkit-animation: vjs-spinner-spin 1.1s cubic-bezier(0.6, 0.2, 0, 0.8) infinite, vjs-spinner-fade 1.1s linear infinite;
-  animation: vjs-spinner-spin 1.1s cubic-bezier(0.6, 0.2, 0, 0.8) infinite, vjs-spinner-fade 1.1s linear infinite;
+.vjs-seeking .vjs-load-progress-spinner .circular,
+.vjs-waiting .vjs-load-progress-spinner .circular {
+  -webkit-animation: rotate 2s linear infinite, vjs-spinner-fade 0.4s linear 1;
+  animation: rotate 2s linear infinite, vjs-spinner-fade 0.4s linear 1;
 }
 
-.vjs-seeking .vjs-load-progress-spinner:before,
-.vjs-waiting .vjs-load-progress-spinner:before {
-  //border-top-color: rgb(255, 255, 255);
+.vjs-seeking .vjs-load-progress-spinner .path,
+.vjs-waiting .vjs-load-progress-spinner .path {
+  -webkit-animation: 1.5s ease-in-out infinite,
+  color 6s ease-in-out infinite;
+  animation: dash 1.5s ease-in-out infinite,
+  color 6s ease-in-out infinite;
 }
 
-.vjs-seeking .vjs-load-progress-spinner:after,
-.vjs-waiting .vjs-load-progress-spinner:after {
-  // border-top-color: rgb(255, 255, 255);
+.vjs-waiting .vjs-load-progress-spinner .path {
   -webkit-animation-delay: 0.44s;
   animation-delay: 0.44s;
 }
 
-@keyframes vjs-spinner-spin {
+@keyframes rotate {
   100% {
     transform: rotate(360deg);
   }
 }
 
-@-webkit-keyframes vjs-spinner-spin {
+@keyframes dash {
+  0% {
+    stroke-dasharray: 1, 200;
+    stroke-dashoffset: 0;
+  }
+  50% {
+    stroke-dasharray: 89, 200;
+    stroke-dashoffset: -35;
+  }
   100% {
-    -webkit-transform: rotate(360deg);
+    stroke-dasharray: 89, 200;
+    stroke-dashoffset: -124;
+  }
+}
+
+@-webkit-keyframes dash {
+  0% {
+    stroke-dasharray: 1, 200;
+    stroke-dashoffset: 0;
+  }
+  50% {
+    stroke-dasharray: 89, 200;
+    stroke-dashoffset: -35;
+  }
+  100% {
+    stroke-dasharray: 89, 200;
+    stroke-dashoffset: -124;
+  }
+}
+
+@-webkit-keyframes color {
+  100%, 0% {
+    stroke: $color-yellow;
+  }
+  40% {
+    stroke: $color-indigo;
+  }
+  66% {
+    stroke: $color-purple;
+  }
+  80%, 90% {
+    stroke: $color-yellow;
+  }
+}
+
+@keyframes color {
+  100%, 0% {
+    stroke: $color-yellow;
+  }
+  40% {
+    stroke: $color-indigo;
+  }
+  66% {
+    stroke: $color-purple;
+  }
+  80%, 90% {
+    stroke: $color-yellow;
   }
 }
 
 @keyframes vjs-spinner-fade {
   0% {
-    border-top-color: $secondary-background-color;
-  }
-  20% {
-    border-top-color: $secondary-background-color;
-  }
-  35% {
-    border-top-color: white;
-  }
-  60% {
-    border-top-color: $secondary-background-color;
+    opacity: 0;
   }
   100% {
-    border-top-color: $secondary-background-color;
+    opacity: 0.85;
   }
 }
 
 @-webkit-keyframes vjs-spinner-fade {
   0% {
-    border-top-color: $secondary-background-color;
-  }
-  20% {
-    border-top-color: $secondary-background-color;
-  }
-  35% {
-    border-top-color: white;
-  }
-  60% {
-    border-top-color: $secondary-background-color;
+    opacity: 0;
   }
   100% {
-    border-top-color: $secondary-background-color;
+    opacity: 0.85;
   }
 }
 
