--- a/src/css/afrostream-player.scss
+++ b/src/css/afrostream-player.scss
@@ -1,7 +1,7 @@
 @import "variables";
 @import "utilities";
-@import "icons";
-@import "../../node_modules/video.js/src/css/video-js";
+@import "icons-sources";
+@import "node_modules/video.js/src/css/video-js";
 @import "component/layout";
 @import "component/control";
 @import "component/poster";
