--- a/src/css/afrostream-player.scss
+++ b/src/css/afrostream-player.scss
@@ -2,6 +2,7 @@
 @import "utilities";
 @import "icons-sources";
 @import "node_modules/video.js/src/css/video-js";
+@import "node_modules/koment-js/src/css/koment";
 @import "component/layout";
 @import "component/control";
 @import "component/poster";
