show koment list

--- a/src/css/afrostream-player.scss
+++ b/src/css/afrostream-player.scss
@@ -10,4 +10,4 @@
 @import "component/adaptive";
 @import "component/big-play";
 @import "component/modal-dialog";
-@import "component/post-box";
+@import "component/koment";
