remove barre koment

--- a/src/css/component/_koment.scss
+++ b/src/css/component/_koment.scss
@@ -1,3 +1,7 @@
 .koment .koment-progress-control {
-  display: none;
+  display: none !default;
+}
+
+.koment.koment-toggle-menu .koment-progress-control {
+  display: none !default;
 }
