replace display controls bar

--- a/src/css/component/_koment.scss
+++ b/src/css/component/_koment.scss
@@ -1,7 +1,7 @@
 .koment .koment-progress-control {
-  display: none !default;
+  display: none !important;
 }
 
 .koment.koment-toggle-menu .koment-progress-control {
-  display: none !default;
+  display: none !important;
 }
