replace koment list size and controls opacity

--- a/src/css/component/_koment.scss
+++ b/src/css/component/_koment.scss
@@ -5,3 +5,8 @@
 .koment.koment-toggle-menu .koment-progress-control {
   display: none !important;
 }
+
+.video-js.vjs-fullscreen .koment.koment-toggle-list .koment-list {
+  width: 20%;
+}
+
