fix initial volume control

--- a/src/css/component/_volume.scss
+++ b/src/css/component/_volume.scss
@@ -15,7 +15,7 @@
   &.vjs-slider-vertical {
     margin: 1.35em auto;
     width: 0.5em;
-    height: inherit;
+    height: 100%;
     .vjs-volume-level {
       width: 0.5em;
       &:before {
